--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,24 +46,21 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets/Scripts/AgeOfMatchic/Config/Config.cs" />
-    <Compile Include="Assets/VFX/HSFiles/Scripts/For demo scenes/HS_DemoShooting.cs" />
     <Compile Include="Assets/Scripts/Common/GridTiles/States/IceState.cs" />
     <Compile Include="Assets/Scripts/Common/Extensions/GameObjectExtensions.cs" />
-    <Compile Include="Assets/VFX/ULTIMA_FX_PACK1/DemoScene/Scripts/RotateCamera.cs" />
     <Compile Include="Assets/ThirdParty/Match3/Runtime/Match3.App/Interfaces/IJob.cs" />
+    <Compile Include="Assets/VFX/Other/ULTIMA_FX_PACK1/DemoScene/Scripts/DemoManager.cs" />
     <Compile Include="Assets/Scripts/Common/GameModes/DrawGameBoardMode.cs" />
-    <Compile Include="Assets/VFX/HSFiles/Scripts/For demo scenes/HS_DemoShooting2D.cs" />
     <Compile Include="Assets/Scripts/Common/GameModes/GameResetMode.cs" />
+    <Compile Include="Assets/VFX/Other/HSFiles/Scripts/HS_EffectSound.cs" />
     <Compile Include="Assets/ThirdParty/Match3/Runtime/Match3.Core/Interfaces/IStatefulSlot.cs" />
     <Compile Include="Assets/ThirdParty/Match3/Runtime/Match3.App/Match3Game.cs" />
     <Compile Include="Assets/Scripts/Common/Models/IconsSetModel.cs" />
     <Compile Include="Assets/ThirdParty/Match3/Runtime/Match3.App/Internal/BaseGame.cs" />
     <Compile Include="Assets/Scripts/Common/Interfaces/IInputSystem.cs" />
-    <Compile Include="Assets/VFX/HSFiles/Scripts/HS_ProjectileMover.cs" />
     <Compile Include="Assets/ThirdParty/Match3/Runtime/Match3.Core/Interfaces/IGrid.cs" />
     <Compile Include="Assets/ThirdParty/Demigiant/DOTween/Modules/DOTweenModulePhysics2D.cs" />
     <Compile Include="Assets/Scripts/Common/UnityGame.cs" />
-    <Compile Include="Assets/VFX/HSFiles/Scripts/For demo scenes/HS_CameraHolder.cs" />
     <Compile Include="Assets/ThirdParty/Match3/Runtime/Match3.Core/Interfaces/IGridSlotState.cs" />
     <Compile Include="Assets/Scripts/Common/GridTiles/States/AvailableState.cs" />
     <Compile Include="Assets/Scripts/Common/SpecialItemDetectors/StoneItemDetector.cs" />
@@ -81,6 +78,8 @@
     <Compile Include="Assets/Scripts/Common/GameScoreBoard.cs" />
     <Compile Include="Assets/ThirdParty/Match3/Runtime/Match3.Infrastructure/SequenceDetectors/HorizontalLineDetector.cs" />
     <Compile Include="Assets/Scripts/Common/GridTiles/SpriteGridTile.cs" />
+    <Compile Include="Assets/VFX/Other/HSFiles/Scripts/For demo scenes/HS_DemoShooting2D.cs" />
+    <Compile Include="Assets/VFX/Other/HSFiles/Scripts/Hovl_Laser2.cs" />
     <Compile Include="Assets/ThirdParty/Match3/Runtime/Match3.Core/GridMath.cs" />
     <Compile Include="Assets/ThirdParty/Match3/Runtime/Match3.App/MatchHelper.cs" />
     <Compile Include="Assets/Scripts/Common/Extensions/ItemsPoolExtensions.cs" />
@@ -91,26 +90,26 @@
     <Compile Include="Assets/ThirdParty/Demigiant/DOTween/Modules/DOTweenModuleEPOOutline.cs" />
     <Compile Include="Assets/ThirdParty/Match3/Runtime/Match3.Infrastructure/Interfaces/IItemsPool.cs" />
     <Compile Include="Assets/Scripts/Common/Interfaces/IUnityGameBoardRenderer.cs" />
+    <Compile Include="Assets/VFX/Other/HSFiles/Scripts/HS_ParticleCollisionInstance.cs" />
     <Compile Include="Assets/ThirdParty/Match3/Runtime/Match3.Infrastructure/Interfaces/IGameMode.cs" />
     <Compile Include="Assets/Scripts/Common/GameModes/GameInitMode.cs" />
     <Compile Include="Assets/ThirdParty/Match3/Runtime/Match3.App/Interfaces/ISequenceDetector.cs" />
-    <Compile Include="Assets/VFX/HSFiles/Scripts/Hovl_Laser.cs" />
     <Compile Include="Assets/Scripts/Common/Interfaces/IAppContext.cs" />
     <Compile Include="Assets/ThirdParty/Match3/Runtime/Match3.Infrastructure/Interfaces/IGameBoardRenderer.cs" />
-    <Compile Include="Assets/VFX/HSFiles/Scripts/Hovl_Laser2.cs" />
     <Compile Include="Assets/ThirdParty/Match3/Runtime/Match3.Infrastructure/Interfaces/IItemGenerator.cs" />
     <Compile Include="Assets/Scripts/Common/GridTiles/GridTile.cs" />
+    <Compile Include="Assets/VFX/Other/HSFiles/Scripts/HS_ProjectileMover2D.cs" />
     <Compile Include="Assets/Scripts/FillStrategies/Jobs/ItemsFallJob.cs" />
     <Compile Include="Assets/ThirdParty/Match3/Runtime/Match3.App/Interfaces/IBoardFillStrategy.cs" />
     <Compile Include="Assets/ThirdParty/Demigiant/DOTween/Modules/DOTweenModuleUtils.cs" />
     <Compile Include="Assets/Scripts/Common/SpecialItemDetectors/IceItemDetector.cs" />
-    <Compile Include="Assets/VFX/HSFiles/Scripts/HS_HittedObject.cs" />
     <Compile Include="Assets/Scripts/Common/Models/TileModel.cs" />
     <Compile Include="Assets/ThirdParty/Demigiant/DOTween/Modules/DOTweenModuleUI.cs" />
     <Compile Include="Assets/Scripts/Common/AnimatedItemSwapper.cs" />
     <Compile Include="Assets/Scripts/Common/UnityItemGenerator.cs" />
     <Compile Include="Assets/ThirdParty/Match3/Runtime/Match3.App/Interfaces/IGameBoardSolver.cs" />
     <Compile Include="Assets/Scripts/Common/TileItemsPool.cs" />
+    <Compile Include="Assets/VFX/Other/HSFiles/Scripts/Hovl_Laser.cs" />
     <Compile Include="Assets/ThirdParty/Match3/Runtime/Match3.Core/Interfaces/IGridSlot.cs" />
     <Compile Include="Assets/Scripts/Common/GridTiles/StatefulGridTile.cs" />
     <Compile Include="Assets/ThirdParty/Demigiant/DOTween/Modules/DOTweenModuleUnityVersion.cs" />
@@ -119,45 +118,46 @@
     <Compile Include="Assets/Scripts/Common/Extensions/SpriteAtlasExtensions.cs" />
     <Compile Include="Assets/Scripts/Common/Extensions/SpriteRendererExtensions.cs" />
     <Compile Include="Assets/Scripts/FillStrategies/Jobs/ItemsMoveJob.cs" />
-    <Compile Include="Assets/VFX/HSFiles/Scripts/HS_EffectSound.cs" />
     <Compile Include="Assets/ThirdParty/Match3/Runtime/Match3.App/Interfaces/ISpecialItemDetector.cs" />
-    <Compile Include="Assets/VFX/ULTIMA_FX_PACK1/DemoScene/Scripts/DemoButton.cs" />
+    <Compile Include="Assets/VFX/Other/HSFiles/Scripts/Hovl_DemoLasers.cs" />
     <Compile Include="Assets/Scripts/Common/Models/PointerEventArgs.cs" />
     <Compile Include="Assets/ThirdParty/Match3/Runtime/Match3.Infrastructure/Interfaces/IDeactivatable.cs" />
-    <Compile Include="Assets/VFX/HSFiles/Scripts/HS_Rotator.cs" />
     <Compile Include="Assets/Scripts/Common/CanvasInputSystem.cs" />
     <Compile Include="Assets/ThirdParty/Match3/Runtime/Match3.App/ItemSequence.cs" />
     <Compile Include="Assets/Scripts/Common/UnityGameBoardRenderer.cs" />
     <Compile Include="Assets/ThirdParty/Demigiant/DOTween/Modules/DOTweenModuleAudio.cs" />
     <Compile Include="Assets/ThirdParty/Match3/Runtime/Match3.Core/Structs/GridPosition.cs" />
-    <Compile Include="Assets/VFX/HSFiles/Scripts/Hovl_LaserDemo.cs" />
     <Compile Include="Assets/ThirdParty/Demigiant/DOTween/Modules/DOTweenModuleSprite.cs" />
     <Compile Include="Assets/ThirdParty/Match3/Runtime/Match3.App/Interfaces/ISolvedSequencesConsumer.cs" />
     <Compile Include="Assets/ThirdParty/Match3/Runtime/Match3.App/Internal/GameBoard.cs" />
     <Compile Include="Assets/Scripts/Common/UiElements/InteractableButton.cs" />
     <Compile Include="Assets/Scripts/Common/GridTiles/States/StoneState.cs" />
-    <Compile Include="Assets/VFX/HSFiles/Scripts/For demo scenes/HS_RaycastInstance.cs" />
     <Compile Include="Assets/Scripts/Common/GameUiCanvas.cs" />
     <Compile Include="Assets/Scripts/Common/Extensions/GameBoardExtensions.cs" />
+    <Compile Include="Assets/VFX/Other/HSFiles/Scripts/For demo scenes/HS_CameraHolder.cs" />
     <Compile Include="Assets/ThirdParty/Demigiant/DOTween/Modules/DOTweenModulePhysics.cs" />
+    <Compile Include="Assets/VFX/Other/HSFiles/Scripts/Hovl_LaserDemo.cs" />
     <Compile Include="Assets/ThirdParty/Match3/Runtime/Match3.Infrastructure/Extensions/AppModeExtensions.cs" />
     <Compile Include="Assets/Scripts/Common/UiElements/InteractableDropdown.cs" />
     <Compile Include="Assets/ThirdParty/Match3/Runtime/Match3.App/Interfaces/ILevelGoalsProvider.cs" />
     <Compile Include="Assets/ThirdParty/Match3/Runtime/Match3.App/Internal/JobsExecutor.cs" />
-    <Compile Include="Assets/VFX/HSFiles/Scripts/HS_ProjectileMover2D.cs" />
+    <Compile Include="Assets/VFX/Other/ULTIMA_FX_PACK1/DemoScene/Scripts/DemoButton.cs" />
     <Compile Include="Assets/Scripts/Common/GridTiles/States/NotAvailableState.cs" />
     <Compile Include="Assets/Scripts/FillStrategies/Jobs/ItemsHideJob.cs" />
     <Compile Include="Assets/ThirdParty/Match3/Runtime/Match3.App/GameConfig.cs" />
+    <Compile Include="Assets/VFX/Other/HSFiles/Scripts/HS_ProjectileMover.cs" />
     <Compile Include="Assets/Scripts/Common/Interfaces/IGridTile.cs" />
     <Compile Include="Assets/Scripts/Common/UnityGridSlot.cs" />
     <Compile Include="Assets/Scripts/FillStrategies/Jobs/ItemsShowJob.cs" />
+    <Compile Include="Assets/VFX/Other/HSFiles/Scripts/HS_Rotator.cs" />
     <Compile Include="Assets/ThirdParty/Match3/Runtime/Match3.Infrastructure/SequenceDetectors/VerticalLineDetector.cs" />
+    <Compile Include="Assets/VFX/Other/HSFiles/Scripts/For demo scenes/HS_DemoShooting.cs" />
     <Compile Include="Assets/ThirdParty/Match3/Runtime/Match3.Infrastructure/ItemGenerator.cs" />
     <Compile Include="Assets/Scripts/FillStrategies/SimpleFillStrategy.cs" />
-    <Compile Include="Assets/VFX/ULTIMA_FX_PACK1/DemoScene/Scripts/DemoManager.cs" />
     <Compile Include="Assets/Scripts/FillStrategies/Models/ItemMoveData.cs" />
-    <Compile Include="Assets/VFX/HSFiles/Scripts/Hovl_DemoLasers.cs" />
-    <Compile Include="Assets/VFX/HSFiles/Scripts/HS_ParticleCollisionInstance.cs" />
+    <Compile Include="Assets/VFX/Other/ULTIMA_FX_PACK1/DemoScene/Scripts/RotateCamera.cs" />
+    <Compile Include="Assets/VFX/Other/HSFiles/Scripts/For demo scenes/HS_RaycastInstance.cs" />
+    <Compile Include="Assets/VFX/Other/HSFiles/Scripts/HS_HittedObject.cs" />
     <Compile Include="Assets/ThirdParty/Match3/Runtime/Match3.Infrastructure/SequenceDetectors/LineDetector.cs" />
     <Compile Include="Assets/Scripts/Common/UnityItem.cs" />
     <Compile Include="Assets/Scripts/Common/Interfaces/IItemGenerator.cs" />
@@ -167,51 +167,51 @@
     <Compile Include="Assets/Scripts/App.cs" />
     <Compile Include="Assets/Scripts/AppContext.cs" />
     <None Include="Assets/TextMesh Pro/Shaders/TMPro.cginc" />
-    <None Include="Assets/VFX/AAA Projectiles Vol 1/Demo scenes/Readme.txt" />
+    <None Include="Assets/VFX/Other/AAA Projectiles Vol 1/Demo scenes/Readme.txt" />
     <None Include="Assets/TextMesh Pro/Shaders/TMP_SDF-Mobile Overlay.shader" />
     <None Include="Assets/TextMesh Pro/Shaders/TMP_Bitmap.shader" />
-    <None Include="Assets/VFX/AAA Projectiles Vol 1/Prefabs/Readme.txt" />
-    <None Include="Assets/VFX/AOE Magic spells Vol.1/Demo AOE skills/Readme.txt" />
-    <None Include="Assets/VFX/AAA Projectiles Vol 1/Demo scenes/Demo files/HS_DemoShooting old script example save.txt" />
-    <None Include="Assets/VFX/HSFiles/Shaders/Lit_CenterGlow.shader" />
-    <None Include="Assets/VFX/HSFiles/Shaders/SmoothSmoke.shader" />
-    <None Include="Assets/VFX/RPG VFX Bundle/Prefabs/HDRP and URP(LWRP).txt" />
+    <None Include="Assets/VFX/Other/AAA Projectiles Vol 1/Prefabs/Readme.txt" />
+    <None Include="Assets/VFX/Other/AOE Magic spells Vol.1/Demo AOE skills/Readme.txt" />
+    <None Include="Assets/VFX/Other/AAA Projectiles Vol 1/Demo scenes/Demo files/HS_DemoShooting old script example save.txt" />
+    <None Include="Assets/VFX/Other/HSFiles/Shaders/Lit_CenterGlow.shader" />
+    <None Include="Assets/VFX/Other/HSFiles/Shaders/SmoothSmoke.shader" />
+    <None Include="Assets/VFX/Other/RPG VFX Bundle/Prefabs/HDRP and URP(LWRP).txt" />
     <None Include="Assets/TextMesh Pro/Shaders/TMPro_Mobile.cginc" />
-    <None Include="Assets/VFX/Magic circles/Demo magic circles Vol 1/Readme.txt" />
-    <None Include="Assets/VFX/HSFiles/Shaders/DissolveNoise.shader" />
+    <None Include="Assets/VFX/Other/Magic circles/Demo magic circles Vol 1/Readme.txt" />
+    <None Include="Assets/VFX/Other/HSFiles/Shaders/DissolveNoise.shader" />
     <None Include="Assets/TextMesh Pro/Shaders/TMP_SDF SSD.shader" />
-    <None Include="Assets/VFX/3D Lasers Pack/Demo scene lasers/If you want to use lasers in 2D.txt" />
+    <None Include="Assets/VFX/Other/3D Lasers Pack/Demo scene lasers/If you want to use lasers in 2D.txt" />
     <None Include="Assets/TextMesh Pro/Shaders/TMP_SDF-Surface-Mobile.shader" />
-    <None Include="Assets/VFX/HSFiles/Shaders/Distortion.shader" />
-    <None Include="Assets/VFX/HSFiles/Shaders/Blend_TwoSides.shader" />
-    <None Include="Assets/VFX/HSFiles/Shaders/Electricity.shader" />
-    <None Include="Assets/VFX/HSFiles/Shaders/Blend_CenterGlow.shader" />
-    <None Include="Assets/VFX/HSFiles/Shaders/Blend_Normals.shader" />
-    <None Include="Assets/VFX/AOE Magic spells Vol.1/Prefabs/Readme.txt" />
+    <None Include="Assets/VFX/Other/HSFiles/Shaders/Distortion.shader" />
+    <None Include="Assets/VFX/Other/HSFiles/Shaders/Blend_TwoSides.shader" />
+    <None Include="Assets/VFX/Other/HSFiles/Shaders/Electricity.shader" />
+    <None Include="Assets/VFX/Other/HSFiles/Shaders/Blend_CenterGlow.shader" />
+    <None Include="Assets/VFX/Other/HSFiles/Shaders/Blend_Normals.shader" />
+    <None Include="Assets/VFX/Other/AOE Magic spells Vol.1/Prefabs/Readme.txt" />
     <None Include="Assets/TextMesh Pro/Shaders/TMP_SDF-Surface.shader" />
-    <None Include="Assets/VFX/3D Lasers Pack/Demo scene lasers/Readme.txt" />
+    <None Include="Assets/VFX/Other/3D Lasers Pack/Demo scene lasers/Readme.txt" />
     <None Include="Assets/TextMesh Pro/Sprites/EmojiOne Attribution.txt" />
     <None Include="Assets/TextMesh Pro/Shaders/TMP_Bitmap-Custom-Atlas.shader" />
-    <None Include="Assets/VFX/HSFiles/Shaders/LightGlow.shader" />
+    <None Include="Assets/VFX/Other/HSFiles/Shaders/LightGlow.shader" />
     <None Include="Assets/TextMesh Pro/Shaders/TMP_SDF.shader" />
     <None Include="Assets/TextMesh Pro/Shaders/TMP_SDF-Mobile SSD.shader" />
     <None Include="Assets/TextMesh Pro/Resources/LineBreaking Leading Characters.txt" />
-    <None Include="Assets/VFX/Magic circles/Prefabs/Loop version/How to use.txt" />
-    <None Include="Assets/VFX/AAA Projectiles Vol 1/Demo scenes/Demo files/HS_ProjectileMover2D script example save.txt" />
+    <None Include="Assets/VFX/Other/Magic circles/Prefabs/Loop version/How to use.txt" />
+    <None Include="Assets/VFX/Other/AAA Projectiles Vol 1/Demo scenes/Demo files/HS_ProjectileMover2D script example save.txt" />
     <None Include="Assets/TextMesh Pro/Shaders/TMPro_Properties.cginc" />
     <None Include="Assets/TextMesh Pro/Shaders/TMPro_Surface.cginc" />
-    <None Include="Assets/VFX/AAA Projectiles Vol 1/Demo scenes/Demo files/HS_DemoShooting2D old script example save.txt" />
-    <None Include="Assets/VFX/HSFiles/Shaders/BlendDistort.shader" />
+    <None Include="Assets/VFX/Other/AAA Projectiles Vol 1/Demo scenes/Demo files/HS_DemoShooting2D old script example save.txt" />
+    <None Include="Assets/VFX/Other/HSFiles/Shaders/BlendDistort.shader" />
     <None Include="Assets/TextMesh Pro/Resources/LineBreaking Following Characters.txt" />
-    <None Include="Assets/VFX/HSFiles/Shaders/AddTrail.shader" />
-    <None Include="Assets/VFX/AAA Projectiles Vol 1/Demo scenes/Demo files/HS_ProjectileMover script example save.txt" />
+    <None Include="Assets/VFX/Other/HSFiles/Shaders/AddTrail.shader" />
+    <None Include="Assets/VFX/Other/AAA Projectiles Vol 1/Demo scenes/Demo files/HS_ProjectileMover script example save.txt" />
     <None Include="Assets/TextMesh Pro/Shaders/TMP_SDF-Mobile Masking.shader" />
     <None Include="Assets/ThirdParty/Demigiant/DOTween/readme.txt" />
-    <None Include="Assets/VFX/HSFiles/Shaders/Add_CenterGlow.shader" />
+    <None Include="Assets/VFX/Other/HSFiles/Shaders/Add_CenterGlow.shader" />
     <None Include="Assets/TextMesh Pro/Shaders/TMP_SDF Overlay.shader" />
     <None Include="Assets/TextMesh Pro/Shaders/TMP_Bitmap-Mobile.shader" />
     <None Include="Assets/TextMesh Pro/Fonts/LiberationSans - OFL.txt" />
-    <None Include="Assets/VFX/AOE Magic spells Vol.1/Demo AOE skills/HDRP and URP(LWRP).txt" />
+    <None Include="Assets/VFX/Other/AOE Magic spells Vol.1/Demo AOE skills/HDRP and URP(LWRP).txt" />
     <None Include="Assets/TextMesh Pro/Shaders/TMP_SDF-Mobile.shader" />
     <None Include="Assets/TextMesh Pro/Sprites/EmojiOne.json" />
     <None Include="Assets/TextMesh Pro/Shaders/TMP_Sprite.shader" />
