--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -49,7 +49,9 @@
     <Compile Include="Assets/Scripts/AgeOfMatchic/Config/Config.cs" />
     <Compile Include="Assets/Scripts/Common/GridTiles/States/IceState.cs" />
     <Compile Include="Assets/Scripts/Match3.App/Interfaces/ILevelGoalsProvider.cs" />
+    <Compile Include="Assets/Scripts/AgeOfMatchic/Config/CharacterStatsConfig.cs" />
     <Compile Include="Assets/Scripts/Match3.App/Internal/BaseGame.cs" />
+    <Compile Include="Assets/Scripts/AgeOfMatchic/Config/AomConfig.cs" />
     <Compile Include="Assets/Scripts/Match3.Infrastructure/GameBoardSolver.cs" />
     <Compile Include="Assets/Scripts/Common/Extensions/GameObjectExtensions.cs" />
     <Compile Include="Assets/VFX/Other/ULTIMA_FX_PACK1/DemoScene/Scripts/DemoManager.cs" />
@@ -88,14 +90,18 @@
     <Compile Include="Assets/Scripts/Common/GameModes/GamePlayMode.cs" />
     <Compile Include="Assets/Scripts/Common/Interfaces/IUnityItem.cs" />
     <Compile Include="Assets/ThirdParty/Demigiant/DOTween/Modules/DOTweenModuleEPOOutline.cs" />
+    <Compile Include="Assets/Scripts/AgeOfMatchic/Config/AbilityEffectType.cs" />
     <Compile Include="Assets/Scripts/Common/Interfaces/IUnityGameBoardRenderer.cs" />
     <Compile Include="Assets/Scripts/Match3.App/Interfaces/IBoardFillStrategy.cs" />
     <Compile Include="Assets/VFX/Other/HSFiles/Scripts/HS_ParticleCollisionInstance.cs" />
     <Compile Include="Assets/Scripts/Common/GameModes/GameInitMode.cs" />
     <Compile Include="Assets/Scripts/Common/Interfaces/IAppContext.cs" />
+    <Compile Include="Assets/Scripts/AgeOfMatchic/Config/CharacterConfig.cs" />
     <Compile Include="Assets/Scripts/Common/GridTiles/GridTile.cs" />
+    <Compile Include="Assets/Scripts/AgeOfMatchic/Config/AbilityConfig.cs" />
     <Compile Include="Assets/VFX/Other/HSFiles/Scripts/HS_ProjectileMover2D.cs" />
     <Compile Include="Assets/Scripts/FillStrategies/Jobs/ItemsFallJob.cs" />
+    <Compile Include="Assets/Scripts/AgeOfMatchic/Config/AbilityEffectConfig.cs" />
     <Compile Include="Assets/ThirdParty/Demigiant/DOTween/Modules/DOTweenModuleUtils.cs" />
     <Compile Include="Assets/Scripts/Common/SpecialItemDetectors/IceItemDetector.cs" />
     <Compile Include="Assets/Scripts/Common/Models/TileModel.cs" />
@@ -117,6 +123,7 @@
     <Compile Include="Assets/Scripts/Match3.App/GameConfig.cs" />
     <Compile Include="Assets/VFX/Other/HSFiles/Scripts/Hovl_DemoLasers.cs" />
     <Compile Include="Assets/Scripts/Common/Models/PointerEventArgs.cs" />
+    <Compile Include="Assets/Scripts/AgeOfMatchic/Config/CharacterVisualData.cs" />
     <Compile Include="Assets/Scripts/Match3.App/Interfaces/IGameBoard.cs" />
     <Compile Include="Assets/Scripts/Common/CanvasInputSystem.cs" />
     <Compile Include="Assets/Scripts/Common/UnityGameBoardRenderer.cs" />
@@ -157,10 +164,12 @@
     <Compile Include="Assets/VFX/Other/HSFiles/Scripts/For demo scenes/HS_RaycastInstance.cs" />
     <Compile Include="Assets/Scripts/Match3.Core/Interfaces/IGridSlotState.cs" />
     <Compile Include="Assets/VFX/Other/HSFiles/Scripts/HS_HittedObject.cs" />
+    <Compile Include="Assets/Scripts/AgeOfMatchic/Config/BoosterAbilityConfig.cs" />
     <Compile Include="Assets/Scripts/Match3.Core/Interfaces/IGrid.cs" />
     <Compile Include="Assets/Scripts/Common/UnityItem.cs" />
     <Compile Include="Assets/Scripts/Common/Interfaces/IItemGenerator.cs" />
     <Compile Include="Assets/Scripts/FillStrategies/FallDownFillStrategy.cs" />
+    <Compile Include="Assets/Scripts/AgeOfMatchic/Config/AbilityVisualData.cs" />
     <Compile Include="Assets/Scripts/Match3.Infrastructure/SequenceDetectors/VerticalLineDetector.cs" />
     <Compile Include="Assets/Scripts/Match3.App/Job.cs" />
     <Compile Include="Assets/Scripts/Common/CurrencyUi.cs" />
